<resources>
    <string name="app_name">Довідник студентів!</string>
    <string name="deafault_text">Список студентів</string>
    <string name="btn_text">Показати список</string>
    <string name="textview">Виберіть групу</string>
    <string name="grp_number_txt">Номер групи:</string>
    <string name="faculty_txt">Факультет:</string>
    <string name="btn_ok_text">ОК</string>
    <string name="btn_grp_detail_txt">Детальніше...</string>
    <string-array name="students_groups">
        <item>ІПЗ19-1</item>
        <item>ІПЗ19-2</item>
        <item>К19</item>
    </string-array>
    <string name="edu_level_txt">Рівень освіти:</string>
    <string name="edu_level_bachelor_txt">Бакалавр</string>
    <string name="edu_level_master_txt">Магістр</string>

    <string name="additional_flg_txt">Додаткові відомості:</string>
    <string name="contract_flg_txt">Наявність контрактників</string>
    <string name="privilege_flg_txt">Наявність пільговиків</string>
</resources>